# chronos

./: .gitignore  CMakeLists.txt  README.md
data/: .gitkeep
docs/: ANALYSIS.md  FEATURE_LIST.md  PROJECT_LAYER_SUMMARY.md  SPEC.md
include/: ConsoleColor.h  Date.h  Exceptions.h  FileHandler.h  Menu.h  OuterMenu.h  Project.h  ProjectManager.h  Task.h  TaskFilter.h  UndoManager.h  UrgencyCalculator.h
src/: ConsoleColor.cpp  Date.cpp  FileHandler.cpp  Menu.cpp  OuterMenu.cpp  Project.cpp  ProjectManager.cpp  Task.cpp  TaskFilter.cpp  UndoManager.cpp  UrgencyCalculator.cpp  main.cpp
tests/: CMakeLists.txt
tests/integration/: test_console_color.cpp  test_error_scenarios.cpp  test_full_workflow.cpp  test_menu_features.cpp  test_persistence.cpp  test_project_lifecycle.cpp  test_undo_workflow.cpp
tests/unit/: test_date.cpp  test_exceptions.cpp  test_filehandler.cpp  test_filter.cpp  test_project.cpp  test_project_manager.cpp  test_task.cpp  test_undo.cpp  test_urgency.cpp
